<resources>
    <string name="app_name">TABQY Client</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <!--HomeActivity-->
    <string name="online_order">Online order</string>
    <string name="reservation">Reservation</string>
    <string name="table_code">Table Code</string>
    <string name="login">Login</string>

    <!--LoginActivity-->
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="email"><font size="13">Email</font></string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="register_by">Register by</string>

    <!--SignUp-->
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name"><font size="13">First Name</font></string>
    <string name="last_name"><font size="13">Last Name</font></string>
    <string name="gender_optional">Gender(Optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--ContactDetails-->
    <string name="save">Save</string>
    <string name="name">Name</string>

    <!--PlaceYourOrderActivity-->
    <string name="thank_you_for_ordering">Thank You\nFor Ordering</string>

    <!--PaymentMethod-->
    <string name="cash">Cash</string>
    <string name="card_to_delivery_person">Card to delivery person</string>
    <string name="save_and_go_back">Save &amp; go back</string>

    <!--Location-->
    <string name="current_location">Current Location</string>
    <string name="saved_address_list">Saved Address list</string>
    <string name="save_address">Save Address</string>

    <!--OrderMethod-->
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>

    <!--MainActivity-->
    <string name="filter">Filter</string>
    <string name="cuisines">Cuisines</string>
    <string name="search">Search</string>

    <!--RstaurantDetails-->
    <string name="menu">Menu</string>
    <string name="reviews">Reviews</string>
    <string name="info">Info</string>

    <!--ItemDetail-->

    <!--Filter-->
    <string name="star">Star</string>
    <string name="distance">Distance</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!--MyCart-->
    <string name="subtotal">Subtotal : </string>
    <string name="vat">VAT : </string>
    <string name="grand_total">Grand Total :</string>
    <string name="redeem">Redeem</string>
    <string name="enter_coupon_code_here">Enter coupon code here</string>
    <string name="add_more">Add More</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_as_guest">Checkout as Guest</string>

    <!--SearchTexts-->
    <string name="search_area">Search area</string>
    <string name="search_cuisine">Search cuisine</string>
    <string name="search_by_food_restaurants">Search by food and restaurants name</string>

    <!--Titles-->
    <string name="title_login">Log in</string>
    <string name="title_signup">Create account</string>
    <string name="select_country">Select country</string>
    <string name="select_area">Select area</string>
    <string name="choose_cuisine">Choose cuisine</string>
    <string name="contact_details">Contact details</string>
    <string name="placing_your_order">Placing your order</string>
    <string name="payment_method">Payment method</string>
    <string name="order_rejected">Order rejected</string>
    <string name="order_method">Order method</string>
    <string name="guest_login">Guest login</string>
    <string name="location">Location</string>
    <string name="restaurants">Restaurants</string>
    <string name="offer">Offer</string>
    <string name="restaurant_details">Restaurant details</string>
    <string name="item_details">Item details</string>
    <string name="my_cart">My Cart</string>
    <string name="order_status">Order Status</string>
    <string name="account">Account</string>
    <string name="filter_by">Filter by</string>

    <!--ThankYou-->
    <string name="Thank_you_signup">Thank you\nfor signing up!</string>
    <string name="next">Next</string>


    <string name="loren">Loren lipsum is simple dummy text Loren lipsum is simple dummy text Loren lipsum is simple dummy text</string>
    <string name="khamis">Khamis-Abha-Road,Al-Rajhi Building Flat 22,4th Floor,near Kahraba(SEC)</string>
    <string name="pending">Pending</string>
    <string name="old_order">Old Order</string>
    <string name="new_order">New Order</string>
    <string name="repeat">Repeat</string>
    <string name="life_time_point">Life time \npoint</string>
    <string name="language"><font size="13">Language</font></string>
    <string name="title_activity_drawer_home">DrawerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="_20_sat_fab">20 SAT\n Fab</string>


</resources>
