<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnlineOrder.Activity.PaymentMethodActivity">

    <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewRegular
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/activity_choose_cuisine_title"
        android:text="@string/payment_method"
        android:textColor="@color/white_color"
        android:textSize="@dimen/title_size"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_back"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:background="@color/theme_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bg_color_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/cash"
                android:textColor="@color/text_color_1"
                android:textSize="18sp"
                android:paddingHorizontal="8dp"
                android:buttonTint="@color/colorPrimary"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color_2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color_5"
            android:paddingLeft="20dp">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/card_to_delivery_person"
            android:textSize="18sp"
            android:textColor="@color/text_color_1"
            android:paddingLeft="20dp"
            android:paddingHorizontal="8dp"
            android:buttonTint="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color_2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/curve_background">

            <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/save_and_go_back"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </RelativeLayout>



</LinearLayout>