<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnlineOrder.Activity.ContactDetailActivity">

    <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewRegular
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/activity_choose_cuisine_title"
        android:text="@string/contact_details"
        android:textColor="@color/white_color"
        android:textSize="@dimen/title_size"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_back"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:background="@color/theme_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bg_color_2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_4">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white_color"
        android:paddingTop="20dp">

        <com.askonlinesolutions.user.tabqyclient.customText.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/activity_contact_detail_name"
            android:hint="@string/name"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/size_12"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:paddingLeft="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/view_color"/>

        <com.askonlinesolutions.user.tabqyclient.customText.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/activity_contact_detail_email"
            android:hint="@string/email"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/size_12"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/view_color"/>

        <com.askonlinesolutions.user.tabqyclient.customText.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/activity_contact_detail_phone"
            android:hint="@string/phone"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/size_12"
            android:background="@android:color/transparent"
            android:inputType="phone"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/view_color"/>

    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/parent_layout"
        android:layout_alignParentBottom="true"
        android:padding="20dp">


        <android.support.v7.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/activity_contact_detail_save"
                android:background="@drawable/curve_background">

                <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:text="@string/save"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    </RelativeLayout>

</LinearLayout>