<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnlineOrder.Activity.OrderMethodActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/activity_order_method_title"
        android:text="@string/location"
        android:textColor="@color/white_color"
        android:textSize="@dimen/title_size"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_back"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:layout_alignParentTop="true"
        android:background="@color/theme_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bg_color_2"
        android:layout_below="@+id/activity_order_method_title"/>

    <!--
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_order_method_title">
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/activity_order_method_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/current_location"
                android:textColor="@color/text_color_1"
                android:textSize="18sp"
                android:paddingHorizontal="8dp"
                android:buttonTint="@color/colorPrimary"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color_2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/saved_address_list"
                android:textSize="18sp"
                android:textColor="@color/text_color_1"
                android:paddingLeft="20dp"
                android:paddingHorizontal="8dp"
                android:buttonTint="@color/colorPrimary" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color_2"/>

    </LinearLayout>

    <!--
        </android.support.v7.widget.CardView>
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/curve_background"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/save_address"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>