<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".Commons.Activity.HomeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:id="@+id/activity_home_layout_online_order"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/app_logo"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/all_layout_background"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@color/less_transparent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_online_order" />


                </RelativeLayout>

                <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewBold
                    android:id="@+id/activity_home_btn_online_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/online_order"
                    android:textColor="@color/white_color"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_home_layout_reservation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/all_layout_background"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@color/less_transparent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_reserved" />

                </RelativeLayout>

                <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewBold
                    android:id="@+id/activity_home_btn_reservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/reservation"
                    android:textColor="@color/white_color"
                    android:textSize="14sp" />

            </RelativeLayout>


            <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/table_code"
                android:textColor="@color/white_color"
                android:textSize="12sp" />

            <View
                android:layout_width="152dp"
                android:layout_height="1.7dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"></View>

            <RelativeLayout
                android:id="@+id/activity_home_layout_login"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/all_layout_background">

                <com.askonlinesolutions.user.tabqyclient.customText.CustomTextViewBold
                    android:id="@+id/activity_home_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login"
                    android:textColor="@color/white_color"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>